<resources>
    <string name="app_name">DBDemo1</string>
    <string name="how_are_you">Wie geht es Ihnen?</string>
    <string name="history">Verlauf</string>
    <string name="saved">Gespeichert!</string>
    <string name="ad1">Icon: grüner lachender Smiley</string>
    <string name="ad2">Icon: gelber neutraler Smiley</string>
    <string name="ad3">Icon: roter trauriger Smiley</string>
</resources>