<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/how_are_you"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/fine"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/ad1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_smiley_fine" />

        <ImageButton
            android:id="@+id/ok"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/ad2"
            android:scaleType="centerInside"
            android:src="@drawable/ic_smiley_ok" />

        <ImageButton
            android:id="@+id/bad"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/ad3"
            android:scaleType="centerInside"
            android:src="@drawable/ic_smiley_bad" />

    </LinearLayout>

    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/history" />
</LinearLayout>